<resources>
    <string name="app_name">GithubApp</string>

    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <string name="search_bar_hint">Search users</string>
    <string name="display">Display</string>
    <string name="theme">Theme</string>
    <string name="light_mode">Light mode</string>
    <string name="dark_mode">Dark mode</string>
    <string name="device_default">Device default</string>
    <string name="tabs">tabs</string>
    <string name="next">next</string>
</resources>